Amanhã eu termino

--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,7 @@ p.danger {
 	color: red;
 }
 /************ Navbar Css ************/
+
 nav.navbar {
   padding: 18px 0;
   position: fixed;
@@ -149,6 +150,9 @@ span.navbar-text {
 }
 .social-icon a:hover img {
 	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
+}
+.vdd-button {
+  border-radius: 10px;
 }
 .navbar-text button {
   font-weight: 700;
