--- a/src/App.css
+++ b/src/App.css
@@ -151,8 +151,8 @@ span.navbar-text {
 .social-icon a:hover img {
 	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
-.vdd-button {
-  border-radius: 10px;
+.Whatsapp {
+  text-decoration: none;
 }
 .navbar-text button {
   font-weight: 700;
