--- a/src/App.css
+++ b/src/App.css
@@ -471,6 +471,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /************ Projects Css ************/
+#link-P {
+  text-decoration: none;
+  color: white;
+}
+
+#P-Next{
+  text-align: center;
+}
 .contact {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
   padding: 60px 0 200px 0;
